# qwen3-test

./: .gitignore  cmd.md  pyproject.toml  requirements.txt
configs/accelerate/: deepspeed_config.yaml  deepspeed_zero2_tp.yaml  deepspeed_zero3.yaml  deepspeed_zero3_offload.yaml  default_config.yaml  fsdp_config.yaml  fsdp_full_shard.yaml  multi_gpu_ddp.yaml  tp.yaml  tp_ddp.yaml
configs/data/: audio_tts_pair.yaml  multimodal_mix_stage2.yaml  text_corpus.yaml
configs/deepspeed/: zero2.json  zero3_30B.json  zero3_30B_offload.json  zero3_nvme_offload.json  zero3_offload.json
configs/model/: qwen3_omni_120b_moe.yaml  qwen3_omni_14b_moe.yaml  qwen3_omni_1_3b_moe.yaml  qwen3_omni_30b_moe.yaml  qwen3_omni_70b_moe.yaml  qwen3_omni_7b_moe.yaml  thinker_text.yaml
configs/train/: accelerator.yaml  deepspeed.yaml  stage1_text_only.yaml  stage2_omni_vision_audio.yaml  tensor_parallel.yaml  tp.yaml
data/corpus/: train_text.jsonl  val_text.jsonl
scripts/: check_unused_grads.py  pretokenize_corpus.py  run_with_accelerate.sh  run_with_tensor_parallel.sh
src/qwen3_omni_pretrain/: cli_infer_thinker.py  cli_train_thinker.py
src/qwen3_omni_pretrain/data/: collators.py
src/qwen3_omni_pretrain/data/datasets/: omni_webdataset.py  text_dataset.py
src/qwen3_omni_pretrain/parallel/: __init__.py  embedding.py  initialize.py  layers.py  tensor_parallel.py
src/qwen3_omni_pretrain/training/: accelerator_utils.py  checkpoint.py  distributed.py  loop.py  loop_accelerator.py  trainer_thinker.py
src/qwen3_omni_pretrain/utils/: config_utils.py
(+5 files in other folders)
